packages/fxa-content-server/app/styles/modules/_settings.scss
/* ... */
.client {
  // default client icon is desktop
  background-image: url('/images/icon-device-laptop.svg');
  background-repeat: no-repeat;
  background-size: 32px 32px;

  height: 40px;
  list-style: none;
  margin: 10px 0;
  position: relative;

  html[dir='ltr'] & {
    background-position: left 2px;
    padding-left: 40px;
  }

  html[dir='rtl'] & {
    background-position: right 2px;
    padding-right: 40px;
  }

  .client-name {
    line-height: 1.2;
    overflow: hidden;
    text-overflow: ellipsis;
    /*allows 5% gutter between device-name and .device-disconnected button*/
    /*reduce by 95px to accomodate the width of the .device-disconnected button*/
    white-space: nowrap;
    width: calc(95% - 95px);
  }

  .settings-button {
    height: 35px;
    /*minimum width required for the button to look good without occupying too much space*/
    /*is also the default computed width on desktop screen*/
    min-width: 100px;
    position: absolute;
    text-align: center;
    top: 0;
    width: 20%;

    html[dir='ltr'] & {
      right: 0;
    }

    html[dir='rtl'] & {
      left: 0;
    }
  }

  a.settings-button {
    padding-top: 8px;
  }

  .device-current {
    color: $color-green;
    font-size: 12px;
  }

  .last-connected {
    color: $color-grey;
    font-size: 12px;
  }

  &[data-os='Windows'] {
    background-image: url('/images/icon-device-laptop-windows.svg');
  }

  &[data-os='macOS'] {
    background-image: url('/images/icon-device-laptop-mac.svg');
  }

  &[data-os='Linux'] {
    background-image: url('/images/icon-device-laptop-linux.svg');
  }

}

.client.mobile {
  background-image: url('/images/icon-device-phone.svg');

  &[data-os='iOS'] {
    background-image: url('/images/icon-device-phone-iphone.svg');
  }

  &[data-os='Android'] {
    background-image: url('/images/icon-device-phone-android.svg');
  }

  &[data-os='Windows'] {
    background-image: url('/images/icon-device-phone-windows.svg');
  }
}

.client.tablet {
  background-image: url('/images/icon-device-tablet.svg');

  &[data-os='iOS'] {
    background-image: url('/images/icon-device-tablet-ipad.svg');
  }

  &[data-os='Android'] {
    background-image: url('/images/icon-device-tablet-android.svg');
  }
}

.client-device {
  &.client-current {
    background-position: left 5px;

  }
}

.client-oAuthApp {
  background-image: url('/images/icon-client-default.svg');

  &[data-name='Add-ons'],
  &[data-name='Firefox Add-ons Frontend'] {
    background-image: url('/images/icon-service-addon.svg');
  }

  &[data-name='Pocket'] {
    background-image: url('/images/icon-service-pocket.svg');
  }

  &[data-name='Firefox Notes'] {
    background-image: url('/images/icon-service-firefox-notes.svg');
  }

  &[data-name='Pontoon'] {
    background-image: url('/images/icon-service-pontoon.svg');
  }
}

.client-webSession {
  background-image: url('/images/icon-web-session.svg');
}

#client-disconnect {
  .intro {
    margin-bottom: 30px;
  }
}

.fxa-radio {

  html[dir='ltr'] & {
    text-align: left;
  }

  html[dir='rtl'] & {
    text-align: right;
  }

  label {
    display: block;
  }
}

.email-list {
  padding: 0;

  .email-address {
    height: 40px;
    list-style: none;
    margin: 10px 0;
    position: relative;

    html[dir='ltr'] & {
      background-position: left 2px;
    }

    html[dir='rtl'] & {
      background-position: right 2px;
    }

    .address {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      width: calc(95% - 95px);
    }

    .details {
      color: $color-grey;
      font-size: 12px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      width: calc(95% - 95px);

      & .not-verified {
        color: $color-red;
      }

      & .verified {
        color: $color-green;
      }
    }

    @media screen and (max-width: 400px) {
      .settings-button-group {
        /*!important is used here because on small screens these options are displayed*/
        /*in another area of the panel. They are to the right of the email.*/
        display: none !important;
      }
    }

    .settings-button-group {
      position: absolute;
      top: 0;

      html[dir='ltr'] & {
        right: 0;
      }

      html[dir='rtl'] & {
        left: 0;
      }

      .settings-button {
        height: 35px;
        margin-left: 10px;
        /*minimum width required for the button to look good without occupying too much space*/
        /*is also the default computed width on desktop screen*/
        min-width: 100px;
        text-align: center;
        width: 20%;
      }
    }
  }

  @media screen and (min-width: 400px) {
    .email-options {
      /*!important is used here because on large screens these options are not displayed.*/
      /*They sit below the email address.*/
      display: none !important;
    }
  }

  .email-options {
    height: 40px;
    list-style: none;
    margin: 10px 0;
    position: relative;

    html[dir='ltr'] & {
      background-position: left 2px;
    }

    html[dir='rtl'] & {
      background-position: right 2px;
    }

    .settings-button-group {
      position: absolute;
      top: 0;

      html[dir='ltr'] & {
        left: 0;
      }

      html[dir='rtl'] & {
        right: 0;
      }

      .settings-button {
        height: 35px;
        /*minimum width required for the button to look good without occupying too much space*/
        /*is also the default computed width on desktop screen*/
        min-width: 100px;
        text-align: center;
        width: 20%;

        &.set-primary {
          margin-right: 10px;
        }
      }
    }
  }
}

